syntax = "proto3";
package mpsim.pb;

import "types_sim.proto";

message RequestReadAcc {
    
}

message ResponseReadAcc {
    Vector3f acc = 1;
}